tests/baselines/reference/decoratorOnClassProperty7.errors.txt
tests/cases/conformance/decorators/class/property/decoratorOnClassProperty7.ts(4,5): error TS1240: Unable to resolve signature of property decorator when called as an expression.
tests/cases/conformance/decorators/class/property/decoratorOnClassProperty7.ts(8,5): error TS1240: Unable to resolve signature of property decorator when called as an expression.


==== tests/cases/conformance/decorators/class/property/decoratorOnClassProperty7.ts (2 errors) ====
    declare function dec(target: Function, propertyKey: string | symbol, paramIndex: number): void;
    
    class C {
        @dec prop;
        ~~~~
!!! error TS1240: Unable to resolve signature of property decorator when called as an expression.
    }
    
    const C1 = class {
        @dec prop;
        ~~~~
!!! error TS1240: Unable to resolve signature of property decorator when called as an expression.
    }
    